Justes para inclusão do CCS e Normalize

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estufa Artificial</title>
+    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="normalize.css"
     <script></script> <!--o link 'Script' vai ser utilizado para adicionar o dashboard ao site, junto com o canvas dentro do body-->
 </head>
-<body>
-    <div class="cabecalho">
-        <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
-        <div class="logo">
-            <img src="./src/imagens/logo.png" alt="logo da equipe I9">
+<body class="corpo">
+        <div class="cabecalho">
+            <img src="image.png" height="90px" alt="logo da equipe I9">
+            <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
         </div>
-        <hr>
-    </div>
-    <div class="corpo">
+        <div class="linha"></div>
+    <div>
         <div class="atualização">
             Atualizado em: dd/mm/aaaa <br> 
             às hh:mm <!--Isto também será feito para26 que se torna um dado interativo, que irá mudar de acordo com a entrada de informações-->
