Remoção do "./" do image.png

--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="corpo">
         <div class="cabecalho">
-            <img src="./image.png" height="90px" alt="logo da equipe I9">
+            <img src="image.png" height="90px" alt="logo da equipe I9">
             <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
         </div>
         <div class="linha"></div>
