--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estufa Artificial</title>
-    <link rel="stylesheet" href="./styles.css"
-    <link rel="stylesheet" href="./normalize.css"
-    <script></script> <!--o link 'Script' vai ser utilizado para adicionar o dashboard ao site, junto com o canvas dentro do body-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/normalize.css">
+    <script></script>
+    <!--o link 'Script' vai ser utilizado para adicionar o dashboard ao site, junto com o canvas dentro do body-->
 </head>
-<body class="corpo">
-        <div class="cabecalho">
-            <img src="image.png" height="90px" alt="logo da equipe I9">
-            <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
-        </div>
-        <div class="linha"></div>
-    <div>
-        <div class="atualização">
-            Atualizado em: dd/mm/aaaa <br> 
-            às hh:mm <!--Isto também será feito para26 que se torna um dado interativo, que irá mudar de acordo com a entrada de informações-->
-        </div>
+
+<body>
+    <div class="cabecalho">
+        <img class="imagem" src="/static/imagens/image.png" height="90px" alt="logo da equipe I9">
+        <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
+        <!--
+            <div class="buttonconfig">
+            <a href="index.html">
+                <button type="button" class="btn btn-outline-success">Início</button>
+            </a>
+            <a href="graficos.html">
+                <button type="button" class="btn btn-outline-success">Gráficos</button>
+            </a>
+        </div>    
+        
+        funcionalidade comentada, para futuras sprints
+        -->
+    </div>
+    <div class="linha"></div>
+    <br>
+
+    <div class="corpo">
         <div class="retangulo-grafico">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
             <!--essa div sera utilizada para criar o retangulo preto que fica ao fundo do grafico, você irá altera-lo e fazer sua aparência pelo CSS3, a div é apenas para criar uma box onde ele possa ser mexido
             
             Sua cor é #262626; e o seu tamanho como está no wireframe é width 1118px e height 567px-->
@@ -27,6 +46,15 @@
         <div class="grafico">
             <canvas></canvas>
         </div>
+        <div class="atualização">
+            Atualizado em: dd/mm/aaaa <br>
+            às hh:mm
+            <!--Isto também será feito para que se torna um dado interativo, que irá mudar de acordo com a entrada de informações-->
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     </div>
 </body>
+
 </html>
