Inclusão das classes "Moldura" e "Corpo"

--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -13,7 +13,7 @@
     <!--o link 'Script' vai ser utilizado para adicionar o dashboard ao site, junto com o canvas dentro do body-->
 </head>
 
-<body>
+<body class="corpo">
     <div class="cabecalho">
         <img class="imagem" src="/static/imagens/image.png" height="90px" alt="logo da equipe I9">
         <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
@@ -33,12 +33,12 @@
     <div class="linha"></div>
     <br>
 
-    <div class="corpo">
+    <div>
         <div class="retangulo-grafico">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
+            <div class="moldura">Volume de Água</div>
+            <div class="moldura">Temperatura</div>
+            <div class="moldura">Umidade Ambiente</div>
+            <div class="moldura">Umidade do Solo</div>
             <!--essa div sera utilizada para criar o retangulo preto que fica ao fundo do grafico, você irá altera-lo e fazer sua aparência pelo CSS3, a div é apenas para criar uma box onde ele possa ser mexido
             
             Sua cor é #262626; e o seu tamanho como está no wireframe é width 1118px e height 567px-->
