--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -13,9 +13,10 @@
     <!--o link 'Script' vai ser utilizado para adicionar o dashboard ao site, junto com o canvas dentro do body-->
 </head>
 
-<body class="corpo">
-    <div class="cabecalho">
-        <img class="imagem" src="/static/imagens/image.png" height="90px" alt="logo da equipe I9">
+<body>
+    <div class="body">
+       <div class="cabecalho">
+        <img class="imagem" src="/static/image/image.png" height="90px" alt="logo da equipe I9">
         <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
         <!--
             <div class="buttonconfig">
@@ -29,27 +30,46 @@
         
         funcionalidade comentada, para futuras sprints
         -->
-    </div>
-    <div class="linha"></div>
-    <br>
-
-    <div>
-        <div class="retangulo-grafico">
-            <div class="moldura">Volume de Água</div>
-            <div class="moldura">Temperatura</div>
-            <div class="moldura">Umidade Ambiente</div>
-            <div class="moldura">Umidade do Solo</div>
+        </div>
+        <div class="linha"></div>
+        <h1 class="subtítulo">Gráficos</h1>
+        <div>
+            <div class=" retangulo-grafico">
+            <div class="moldura">
+                <button type="button" class="btn btn-success">Volume da Água</button>
+            </div>
+            <div class="moldura">
+                <button type="button" class="btn btn-success">Temperatura</button>
+            </div>
+            <div class="moldura">
+                <button type="button" class="btn btn-success">Umidade Ambiente</button>
+            </div>
+            <div class="moldura">
+                <button type="button" class="btn btn-success">Umidade do Solo</button>
+            </div>
             <!--essa div sera utilizada para criar o retangulo preto que fica ao fundo do grafico, você irá altera-lo e fazer sua aparência pelo CSS3, a div é apenas para criar uma box onde ele possa ser mexido
             
             Sua cor é #262626; e o seu tamanho como está no wireframe é width 1118px e height 567px-->
-        </div>
+            </div>
         <div class="grafico">
             <canvas></canvas>
         </div>
         <div class="atualização">
-            Atualizado em: dd/mm/aaaa <br>
-            às hh:mm
-            <!--Isto também será feito para que se torna um dado interativo, que irá mudar de acordo com a entrada de informações-->
+            <!--teste do colapse-->
+            <p>
+                <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                  Atualização
+                </button>
+              </p>
+              <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                  <div class="card card-body atconfig" style="width: 300px;">
+                    Atualizado em: dd/mm/aaaa <br>
+                    às hh:mm  <!--Isto também será feito para que se torna um dado interativo, que irá mudar de acordo com a entrada de informações-->
+                  </div>
+                </div>
+              </div>
+            <!--fim do teste colapse -->
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
