atualização do código do html para o bootstrap

--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -32,32 +32,11 @@
         -->
         </div>
         <div class="linha"></div>
-        <h1 class="subtítulo">Gráficos</h1>
-        <div>
-            <div class=" retangulo-grafico">
-            <div class="moldura">
-                <button type="button" class="btn btn-success">Volume da Água</button>
-            </div>
-            <div class="moldura">
-                <button type="button" class="btn btn-success">Temperatura</button>
-            </div>
-            <div class="moldura">
-                <button type="button" class="btn btn-success">Umidade Ambiente</button>
-            </div>
-            <div class="moldura">
-                <button type="button" class="btn btn-success">Umidade do Solo</button>
-            </div>
-            <!--essa div sera utilizada para criar o retangulo preto que fica ao fundo do grafico, você irá altera-lo e fazer sua aparência pelo CSS3, a div é apenas para criar uma box onde ele possa ser mexido
-            
-            Sua cor é #262626; e o seu tamanho como está no wireframe é width 1118px e height 567px-->
-            </div>
-        <div class="grafico">
-            <canvas></canvas>
-        </div>
+
         <div class="atualização">
             <!--teste do colapse-->
             <p>
-                <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                <button class="btn btn-success corbotão" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
                   Atualização
                 </button>
               </p>
@@ -71,6 +50,30 @@
               </div>
             <!--fim do teste colapse -->
         </div>
+        
+        <h1 class="subtítulo">Gráficos</h1>
+        <div>
+            <div class=" retangulo-grafico">
+            <div class="moldura">
+                <button type="button" class="btn btn-success corbotão">Volume da Água</button>
+            </div>
+            <div class="moldura">
+                <button type="button" class="btn btn-success corbotão">Temperatura</button>
+            </div>
+            <div class="moldura">
+                <button type="button" class="btn btn-success corbotão">Umidade Ambiente</button>
+            </div>
+            <div class="moldura">
+                <button type="button" class="btn btn-success corbotão">Umidade do Solo</button>
+            </div>
+            <!--essa div sera utilizada para criar o retangulo preto que fica ao fundo do grafico, você irá altera-lo e fazer sua aparência pelo CSS3, a div é apenas para criar uma box onde ele possa ser mexido
+            
+            Sua cor é #262626; e o seu tamanho como está no wireframe é width 1118px e height 567px-->
+            </div>
+        <div class="grafico">
+            <canvas></canvas>
+        </div>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
