--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="body">
         <div class="cabecalho">
-            <img class="imagem" src="/static/imagens/image.png" height="90px" alt="logo da equipe I9">
+            <img class="imagem" src="/static/image/image.png" height="90px" alt="logo da equipe I9">
             <h1 class="titulo">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
             <!--
             <div class="buttonconfig">
@@ -58,11 +58,11 @@
             <div class=" retangulo-grafico">
                 <div class="moldura">
                     <button type="button" class="btn btn-success corbotão">Volume da Água</button>
-                    <img class="volume" src="/static/imagens/Volume de Água.png" alt="volume">
+                    <img class="volume" src="/static/image/Volume de Água.png" alt="volume">
                 </div>
                 <div class="moldura">
                     <button type="button" class="btn btn-success corbotão">Temperatura</button>
-                    <img class="temperatura" src="/static/imagens/Temperatura.png" alt="agua">
+                    <img class="temperatura" src="/static/image/Temperatura.png" alt="agua">
                 </div>
                 <div class="moldura">
                     <button type="button" class="btn btn-success corbotão">Umidade Ambiente</button>
