--- a/src/Static/styles.css
+++ b/src/Static/styles.css
@@ -1,4 +1,3 @@
-
 .cabecalho {
     display: flex;
     align-items: center; 
@@ -104,4 +103,8 @@ background-color: #22b14c;
     width: 90%;
     height: 90%;
     border-radius: 5%
+}
+
+input[type="file"]{
+    display: none;
 }
