atualização da fonte do campo "atualizações" do html

--- a/src/Templates/graficos.html
+++ b/src/Templates/graficos.html
@@ -92,7 +92,7 @@
     <div class="rodapé">
         <!--atualização-->
     <div class="atualização">
-        <h1 class="concert-one-regular">Atualizado em: dd/mm/aaaa <br>
+        <h1 class="silkscreen-regular silkscreen-bold">Atualizado em: dd/mm/aaaa <br>
                         às hh:mm </h1>
          <!--Isto também será feito para que se torna um dado interativo, que irá mudar de acordo 
          com a entrada de informações-->
