--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,57 +1,57 @@
+/* CSS base */
+/* Reset do box-sizing e margem/preenchimento padrão */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #202020;
+    font-family: Arial, sans-serif; /* Defina uma fonte padrão */
 }
 
 .cabecalho {
     display: flex;
-    align-items: center; 
-    border: solid;
-    border-color: rgb(0, 0, 0);
+    align-items: center;
+    justify-content: space-between;
     background-color: rgb(0, 0, 0);
-    height: 120px;
-    width: 1550px;
+    padding: 10px;
+    border: none; /* Remover a borda */
+    justify-content: flex-end; /* Alinhar os botões à direita */
+}
 
+.botoes-nav {
+    float: left; /* Alinhar os botões à esquerda */
+    margin-right: 10px;
 }
 
 .titulo {
+    font-size: 3rem; /* Define o tamanho da fonte do título */
+    max-width: 90%; /* Define a largura máxima do título */
     color: #1db954;
-    font-size: 50px;
-    margin-left: 4%;
+    margin-right: 55%;
 }
-
-.rubik-mono-one-regular {
-    font-family: "Rubik Mono One", monospace;
+.bebas-neue-regular {
+    font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-.subtítulo{
-    color: aliceblue;
-    margin-top: 1%;
+}
+
+.subtitulo {
+    color: white;
+    margin-top: 1%; /* Ajuste a margem superior para 3% */
     text-align: center;
 }
 
-.silkscreen-regular {
+.silkscreen-regular,
+.silkscreen-bold {
     font-family: "Silkscreen", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .silkscreen-bold {
-    font-family: "Silkscreen", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-    
-.imagem{
-    margin-left: 1%;
-
 }
 
-
-.logo {
-    padding-left: 10px;
-    
+.imagem {
+    margin-right: 3%;
+    height: 75px;
 }
 
 .selec_arq {
@@ -59,30 +59,25 @@ body {
     font-size: larger;
     font-family: monospace;
     margin-top: 1%;
-   
 }
 
-.atconfig{
+.atconfig {
     background-color: #313131;
 }
 
-
 .retangulo-grafico {
-    width: 900px;
-    height: 700px;
-    margin-top: 2%;
-    margin-left: 20%;
-    border-radius: 10px ;
+    width: 90%;
+    height: 70vh;
+    margin: 2% auto; /* Centralize o retângulo e defina uma margem superior */
+    border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 1px;
-    
 }
 
-.linha{
-     border-bottom: 2px solid #1db954;
-      
+.linha {
+    border-bottom: 2px solid #1db954;
 }
 
 .moldura {
@@ -91,102 +86,133 @@ body {
     text-align: center;
     font-family: monospace;
     color: #1db954;
-    border-radius: 5%;}
-
-.corbotão{
-background-color: #1db954;
-margin-left: 1%;
-margin-top: 1px;
+    border-radius: 5%;
 }
 
-.moldura .volume{
-    padding: 1%;
-    width: 90%;
-    height: 90%;
-    border-radius: 5% ;
+.corbotão {
+    background-color: #1db954;
+    margin-left: 1%;
+    margin-top: 1px;
 }
 
-.moldura .temperatura{
+.moldura .volume,
+.moldura .temperatura,
+.moldura .umidadesolo,
+.moldura .umidadeambiente {
     padding: 1%;
     width: 90%;
     height: 90%;
     border-radius: 5%;
 }
 
-.moldura .umidadesolo{
-    padding: 1%;
-    width: 90%;
-    height: 90%;
-    border-radius: 5%
-}
-
-.moldura .umidadeambiente{
-    padding: 1%;
-    width: 90%;
-    height: 90%;
-    border-radius: 5%
-}
-
-input[type="file"]{
+input[type="file"] {
     display: none;
 }
 
-.flex{
+.flex {
     display: flex;
     flex-direction: row;
-    margin-left: 24%;
+    justify-content: center;
+    margin-top: 10px;
 }
 
-.botao{
+.botao {
     background-color: #1db954;
+    margin-right: 10px;
 }
 
-.carrosel{
+.carrosel {
     border: solid;
     border-color: #1db954;
-    margin-left: 3%;
-    width: 700px;
-    height: 400px;
+    max-width: 100%;
+    height: auto;
+    margin: -3% auto 1% auto; /* Ajuste a margem superior para 4% */
 }
 
-.atualização{
-    margin-top: 5%;
+.atualização {
+    margin-top: 35%;
     margin-left: 1%;
-    color: aliceblue;
+    color: white;
 }
 
 .concert-one-regular {
     font-family: "Concert One", sans-serif;
     font-weight: 400;
-    font-style: normal;
 }
 
-.div{
-    background-color: black;
-    margin-left: 2%;
-    border: solid;
-    border-color: #1db954;
-    width: 700px;
-    height: 400px;}
-
-.flex2{
+.flex2 {
     display: flex;
-    margin-top: 7%;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
 }
 
-.texto{
-    margin-top: 5%;
-    margin-left: 1%;
-    margin-right: 1%;
+.texto {
+    margin-top: 1%; /* Ajuste a margem superior para 3% */
+    margin-left: 20%;
+    margin-right: 20%;
     text-align: center;
     color: aliceblue;
+    font-size: 25px;
+    justify-content: space-between;
 }
 
-.botaozinhome{
-    margin-left: 42%;
+.botaozinhome {
+    margin-top: 2%;
+    align-items: center;
+}
+/* Regras @media para tornar o cabeçalho responsivo em dispositivos móveis */
+@media only screen and (max-width: 480px) {
+    .cabecalho {
+        padding: 5px; /* Reduzir o preenchimento */
+    }
+
+    .titulo {
+        margin-right: 13%;
+        font-size: 1.3rem; /* Reduzir o tamanho da fonte */
+        text-align: left;
+    }
+
+    .imagem {
+        width: 10%;
+        height: 10%;
+        margin-left: 10px;
+    }
+
+    .botoes-nav{
+        font-size: 10px;
+        justify-content: flex-start;
+    }
+
+    .botaozinhome {
+        margin-top: 8%;
+    }
 }
 
-.rodapé{
-    margin-top: 15%;
+@media only screen and (max-width: 768px) {
+    .titulo {
+        margin-right: 40%;
+        font-size: 1.3rem; /* Reduzir o tamanho da fonte */
+        text-align: left;
+    }
 }
-  
+
+@media only screen and (max-width: 820px) {
+    .titulo {
+        margin-right: 42%;
+        font-size: 1.5rem; /* Reduzir o tamanho da fonte */
+        text-align: left;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .titulo {
+        margin-right: 4%;
+        font-size: 1.8rem; /* Reduzir o tamanho da fonte */
+        text-align: left;
+    }
+}
+
+
+
+
