--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -5,67 +5,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estufa Artificial</title>
-<!--link do bootstrap-->
+    
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<!--link das fontes usadas-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-<!--fonte 2-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Press+Start+2P&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-<!--fonte 3-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
-<!--css-->
-<link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
-<link rel="stylesheet" href="/static/styles.css">
-<link rel="stylesheet" href="/static/normalize.css">
-<!--o link 'Script' vai ser utilizado para adicionar o dashboard ao site, junto com o canvas dentro do body-->
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Concert+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Press+Start+2P&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+    
+    <!-- Custom CSS -->
+    <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
+    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/normalize.css">
 </head>
 
 <body>
     <div class="cabecalho">
-        <img class="imagem" src="/static/image/image.png" height="90px" alt="logo da equipe I9">
-        <h1 class="titulo rubik-mono-one-regular">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
-    <!--botões das páginas-->
-    <div class="flex">
-        <a href="index.html">
-            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">INÍCIO</button>
-        </a>
-        <a href="graficos.html">
-            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">GRÁFICOS</button>
-        </a>
-    </div>    
+        <img class="imagem" src="/static/image/image.png" alt="logo da equipe I9">
+        <h1 class="titulo bebas-neue-regular">PROJETO SMART FARM</h1>
+        <!-- Botões de navegação -->
+        <div class="flex">
+            <a href="index.html">
+                <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold botoes-nav">INÍCIO</button>
+            </a>
+            <a href="graficos.html">
+                <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold botoes-nav">GRÁFICOS</button>
+            </a>
+        </div>
     </div>
+    
+    <!-- Linha separadora -->
     <div class="linha"></div>
 
     <div class="body">
         <div class="flex2">
-        <!--imagem da estufa-->
-        <img  src="/static/image/carousel1.webp" class="carrosel" alt="PROJETO">  
-        <!--div para as informações-->
-        <div class="div">
-            <h1 class="subtítulo silkscreen-regular silkscreen-bold">FUNCIONALIDADES</h1>
-            <h2 class="texto concert-one-regular">Este site possui algumas funcionalidades que podem ajudar os usuários
-                a visualizar de uma maneira fácil os dados da estufa. Essas funcionalidades incluem: botões de navegação,
-                botões para input de dados, e também botões para os filtros dos Gráficos. Bora conferir?
-            </h2>
-            <div class="botaozinhome">
-                <a href="graficos.html">
-                    <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">GRÁFICOS</button>
-                </a>
+            <!-- Imagem da estufa -->
+            <img src="/static/image/carousel1.webp" class="carrosel" alt="PROJETO">  
+            
+            <!-- Div para as informações -->
+            <div class="div">
+                <h1 class="subtitulo silkscreen-regular silkscreen-bold">FUNCIONALIDADES</h1>
+                <h2 class="texto concert-one-regular">
+                    Este site possui algumas funcionalidades que podem ajudar os usuários a visualizar de uma maneira fácil os dados da estufa. Essas funcionalidades incluem: botões de navegação, botões para input de dados, e também botões para os filtros dos Gráficos. Bora conferir?
+                    <div class="botaozinhome">
+                        <a href="graficos.html">
+                            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">GRÁFICOS</button>
+                        </a>
+                    </div>
+                </h2>
+                
             </div>
-
         </div>
-        </div>
-        <!--rodapé-->
-        <div class="rodapé"></div>
-    </div>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
