--- a/src/Templates/graficos.html
+++ b/src/Templates/graficos.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gráficos</title>
-<!--link bootstrap-->
+    <title>Estufa Artificial</title>
+    
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<!--link das fontes usadas-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-<!--fonte 2-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Press+Start+2P&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-<!--fonte 3-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
-<!--css-->
-<link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">   
-<link rel="stylesheet" href="/static/styles.css">
-<link rel="stylesheet" href="/static/normalize.css">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Concert+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Press+Start+2P&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+    
+    <!-- Custom CSS -->
+    <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
+    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/normalize.css">
 </head>
 
 <body>
     <div class="cabecalho">
         <img class="imagem" src="/static/image/image.png" height="90px" alt="logo da equipe I9">
-        <h1 class="titulo rubik-mono-one-regular">PROJETO SMART FARM</h1> <!--O código da cor verde é #5DC47B-->
-    <!--botões das páginas-->
-    <div class="flex">
-        <a href="index.html">
-            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">INÍCIO</button>
-        </a>
-        <a href="graficos.html">
-            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">GRÁFICOS</button>
-        </a>
-    </div>    
-    
+        <h1 class="titulo bebas-neue-regular">PROJETO SMART FARM</h1>
+        <!-- Botões de navegação -->
+        <div class="flex">
+            <a href="index.html">
+                <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold botoes-nav">INÍCIO</button>
+            </a>
+            <a href="graficos.html">
+                <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold botoes-nav">GRÁFICOS</button>
+            </a>
+        </div>
     </div>
+    
+    <!-- Linha separadora -->
     <div class="linha"></div>
 
     <div class="body">
@@ -63,12 +62,12 @@
             </p>
         </div>
         <!--fim do botão selecionar arquivo -->
-        <h1 class="subtítulo silkscreen-regular silkscreen-bold">Gráficos</h1>
+        <h1 class="subtitulo silkscreen-regular silkscreen-bold">Gráficos</h1>
         <div>
             <div class=" retangulo-grafico">
                 <div class="moldura">
                     <button type="button" class="btn btn-success corbotão silkscreen-regular silkscreen-bold">Volume da Água</button>
-                    <img class="volume" src="/static/image/Volume_de_Agua.png" alt="volume">
+
                 </div>
                 <div class="moldura">
                     <button type="button" class="btn btn-success corbotão silkscreen-regular silkscreen-bold">Temperatura</button>
@@ -102,5 +101,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/static/graficos.js"></script>
 </body>
 </html>
