--- a/src/Templates/graficos.html
+++ b/src/Templates/graficos.html
@@ -19,8 +19,8 @@
     
     <!-- Custom CSS -->
     <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
-    <link rel="stylesheet" href="/static/styles.css">
-    <link rel="stylesheet" href="/static/normalize.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/normalize.css">
 </head>
 
 <body>
@@ -41,7 +41,6 @@
     <!-- Linha separadora -->
     <div class="linha"></div>
 
-    <div class="body">
         <!--botão selecionar arquivo-->
         <div class="selec_arq">
             <p>
@@ -52,56 +51,30 @@
                 function checkFileType(input) {
                     const file = input.files[0];
                     
-                    // Verifica se um arquivo foi selecionado e se o tipo de arquivo não é CSV
                     if (file && !file.name.endsWith('.csv')) {
                         alert('Por favor, selecione apenas arquivos CSV!');
-                        input.value = ''; //Limpa a seleção do arquivo
+                        input.value = ''; 
                     }
                 }
                 </script>
             </p>
+            <h1 class="subtitulo silkscreen-regular silkscreen-bold titulo-graficos">Gráficos</h1>
+            <div class="chart-grid">
+            <div id="temperature-chart" class="chart-container"></div>
+            <div id="water-volume-chart" class="chart-container"></div>
+            <div id="humidity-chart" class="chart-container"></div>
+            <div id="soil-moisture-chart" class="chart-container"></div>
         </div>
-        <!--fim do botão selecionar arquivo -->
-        <h1 class="subtitulo silkscreen-regular silkscreen-bold">Gráficos</h1>
-        <div>
-            <div class=" retangulo-grafico">
-                <div class="moldura">
-                    <button type="button" class="btn btn-success corbotão silkscreen-regular silkscreen-bold">Volume da Água</button>
-
-                </div>
-                <div class="moldura">
-                    <button type="button" class="btn btn-success corbotão silkscreen-regular silkscreen-bold">Temperatura</button>
-                    <img class="temperatura" src="/static/image/Temperatura.png" alt="agua">
-                </div>
-                <div class="moldura">
-                    <button type="button" class="btn btn-success corbotão silkscreen-regular silkscreen-bold">Umidade Ambiente</button>
-                    <img class="umidadeambiente" src="/static/image/Umidade ambiente.png" alt="">
-                </div>
-                <div class="moldura">
-                    <button type="button" class="btn btn-success corbotão silkscreen-regular silkscreen-bold">Umidade do Solo</button>
-                    <img class="umidadesolo" src="/static/image/Umidade Solo.png" alt="">
-                </div>
-                <!--essa div sera utilizada para criar o retangulo preto que fica ao fundo do grafico, você irá altera-lo e fazer sua aparência pelo CSS3, a div é apenas para criar uma box onde ele possa ser mexido
-            
-            Sua cor é #262626; e o seu tamanho como está no wireframe é width 1118px e height 567px-->
-
-            </div>
-    </div>
-    <!--rodapé-->
     <div class="rodapé">
-        <!--atualização-->
     <div class="atualização">
         <h1 class="silkscreen-regular silkscreen-bold">Atualizado em: dd/mm/aaaa <br>
                         às hh:mm </h1>
-         <!--Isto também será feito para que se torna um dado interativo, que irá mudar de acordo 
-         com a entrada de informações-->
         </div>
-    </div>
-<!--link do bootstrap tbm-->    
+    </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/static/graficos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ag-charts-community@9.3.1/dist/umd/ag-charts-community.js"></script>
+    <script src="/static/javascript/graficos.js"></script>
 </body>
 </html>
