--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -19,8 +19,8 @@
     
     <!-- Custom CSS -->
     <link rel="shortcut icon" href="/static/image/ico.ico" type="image/x-icon">       
-    <link rel="stylesheet" href="/static/styles.css">
-    <link rel="stylesheet" href="/static/normalize.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/normalize.css">
 </head>
 
 <body>
