--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Concert+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Press+Start+2P&family=Rubik+Mono+One&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     
     <!-- Custom CSS -->
@@ -30,10 +30,10 @@
         <!-- Botões de navegação -->
         <div class="flex">
             <a href="index.html">
-                <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold botoes-nav">INÍCIO</button>
+                <button type="button" class="btn btn-success botao archivo-black-regular botoes-nav">INÍCIO</button>
             </a>
             <a href="graficos.html">
-                <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold botoes-nav">GRÁFICOS</button>
+                <button type="button" class="btn btn-success botao archivo-black-regular botoes-nav">GRÁFICOS</button>
             </a>
         </div>
     </div>
@@ -48,18 +48,19 @@
             
             <!-- Div para as informações -->
             <div class="div">
-                <h1 class="subtitulo silkscreen-regular silkscreen-bold">FUNCIONALIDADES</h1>
+                <h1 class="subtitulo archivo-black-regular">FUNCIONALIDADES</h1>
                 <h2 class="texto concert-one-regular">
                     Este site possui algumas funcionalidades que podem ajudar os usuários a visualizar de uma maneira fácil os dados da estufa. Essas funcionalidades incluem: botões de navegação, botões para input de dados, e também botões para os filtros dos Gráficos. Bora conferir?
                     <div class="botaozinhome">
                         <a href="graficos.html">
-                            <button type="button" class="btn btn-success botao silkscreen-regular silkscreen-bold">GRÁFICOS</button>
+                            <button type="button" class="btn btn-success botao archivo-black-regular">GRÁFICOS</button>
                         </a>
                     </div>
                 </h2>
                 
             </div>
         </div>
+        <div class="rodapé"></div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
